--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "cli-table3": "^0.6.5",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
